refactoring von Verfügbarkeiten von Nutzern und Räumen